still working on getting the alignment correct for skills icons

--- a/src/Components/Portfolio/PortfolioProjects/PortfolioProjects.css
+++ b/src/Components/Portfolio/PortfolioProjects/PortfolioProjects.css
@@ -18,8 +18,8 @@
     height: 250px;  
     justify-content: center;
     left: 8%;
-    margin-left: 5px; 
-    margin-right: 5px
+    margin-left: 5px;
+    margin-right: 5px;
    
 }
 
