--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -8,7 +8,7 @@
 }
 
 .SkillsImg, .SkillsImg2, .SkillsImg3 {
-    margin-left: auto;
+    margin-left: 110px;
     margin-right: auto; 
     width: 400px; 
 
